fix bug 材料和装备准备合并到同一表中

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activity.MainActivity"
-            android:launchMode="singleTask"/>
+        <activity
+            android:name=".ui.activity.MainActivity"
+            android:launchMode="singleTask" />
         <activity
             android:name=".ui.activity.SplashActivity"
             android:theme="@style/AppTheme.Splash">
@@ -26,7 +27,8 @@
         <activity android:name=".ui.activity.SearchActivity" />
         <activity android:name=".ui.activity.CareerIntroduceActivity" />
         <activity android:name=".ui.activity.BossDetailActivity" />
-        <activity android:name=".ui.activity.OtherDetailActivity"></activity>
+        <activity android:name=".ui.activity.OtherDetailActivity" />
+        <activity android:name=".ui.activity.ImageShowActivity"></activity>
     </application>
 
 </manifest>
