加载数据优化，大幅减少初始化的时间，修复已知bug，优化跳转方案

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,7 @@
         <activity android:name=".ui.activity.SearchActivity" />
         <activity android:name=".ui.activity.CareerIntroduceActivity" />
         <activity android:name=".ui.activity.BossDetailActivity" />
-        <activity android:name=".ui.activity.OtherDetailActivity" />
-        <activity android:name=".ui.activity.ImageShowActivity"></activity>
+        <activity android:name=".ui.activity.ImageShowActivity"/>
     </application>
 
 </manifest>
