--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.smallcat.theworld">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 获取网络状态 -->
-    <uses-permission android:name="android.permission.INTERNET" /> <!-- 网络通信-->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />  <!-- 获取设备信息 -->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 获取MAC地址-->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- 网络通信 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- 获取设备信息 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 获取MAC地址 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 读写sdcard，storage等等 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- 允许程序录制音频 -->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
@@ -19,16 +19,17 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!-- 可选-->
-        <activity android:name="com.pgyersdk.feedback.FeedbackActivity"/>
-        <!-- 必选-->
+        <!-- 可选 -->
+        <activity android:name="com.pgyersdk.feedback.FeedbackActivity" />
+        <!-- 必选 -->
         <provider
             android:name="com.pgyersdk.PgyerProvider"
             android:authorities="com.smallcat.theworld.com.pgyer.provider"
-            android:exported="false"/>
+            android:exported="false" />
+
         <meta-data
             android:name="PGYER_APPID"
-            android:value="91217be11b504026be810322258d504c" >
+            android:value="91217be11b504026be810322258d504c">
         </meta-data>
 
         <activity
@@ -48,7 +49,8 @@
         <activity android:name=".ui.activity.SearchActivity" />
         <activity android:name=".ui.activity.CareerIntroduceActivity" />
         <activity android:name=".ui.activity.BossDetailActivity" />
-        <activity android:name=".ui.activity.ImageShowActivity"/>
+        <activity android:name=".ui.activity.ImageShowActivity" />
+        <activity android:name=".ui.activity.CareerDetailActivity"/>
     </application>
 
 </manifest>
