--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- 允许程序录制音频 -->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
+    <meta-data android:name="android.max_aspect"
+        android:value="2.1"/>
+
     <application
         android:name=".App"
         android:allowBackup="true"
@@ -31,8 +34,7 @@
 
         <meta-data
             android:name="PGYER_APPID"
-            android:value="91217be11b504026be810322258d504c">
-        </meta-data>
+            android:value="91217be11b504026be810322258d504c"/>
 
         <activity
             android:name=".ui.activity.MainActivity"
@@ -52,7 +54,8 @@
         <activity android:name=".ui.activity.CareerIntroduceActivity" />
         <activity android:name=".ui.activity.BossDetailActivity" />
         <activity android:name=".ui.activity.ImageShowActivity" />
-        <activity android:name=".ui.activity.CareerDetailActivity"/>
+        <activity android:name=".ui.activity.CareerDetailActivity" />
+        <activity android:name=".ui.activity.MyWorldActivity"/>
     </application>
 
 </manifest>
