--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
+.classpath
+.project
+.settings
+eclipsebin
+
+bin
+gen
+build
+out
+lib
+
+target
+pom.xml.*
+release.properties
+
+.idea
 *.iml
-.gradle
-/local.properties
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+*.ipr
+*.iws
+classes
+
+obj
+
 .DS_Store
-/build
-/captures
-.externalNativeBuild
