bug修复，添加存档功能，世界版本0.42a

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:networkSecurityConfig">
-        <activity android:name=".ui.activity.RecordEditActivity"></activity>
+        <activity android:name=".ui.activity.WebActivity"></activity>
+        <activity android:name=".ui.activity.RecordEditActivity" />
         <activity android:name=".ui.activity.EquipAddActivity" />
         <activity android:name="com.pgyersdk.feedback.FeedbackActivity" />
 
