存档功能优化，世界版本0.42b

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 12 09:04:11 CST 2018
+#Fri Mar 22 18:16:51 CST 2019
+ndk.dir=/Users/hui/Library/Android/sdk/ndk-bundle
 sdk.dir=/Users/hui/Library/Android/sdk
