--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,14 @@ android {
         applicationId "com.smallcat.theworld"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 2112
-        versionName "2.11.2"
+        versionCode 21204
+        versionName "2.12.4"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters "armeabi", "armeabi-v7a", "x86"
+        }
     }
 
     buildTypes {
@@ -39,9 +44,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     implementation files('libs/tbs_sdk_thirdapp_v3.6.0.1249_43610_sharewithdownload_withoutGame_obfs_20180608_114954.jar')
-    // ViewModel and LiveData
+    /*// ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
-    kapt "android.arch.lifecycle:compiler:1.1.1"
+    kapt "android.arch.lifecycle:compiler:1.1.1"*/
 
     implementation 'com.tencent.bugly:crashreport:2.3.6'
 
@@ -56,7 +61,7 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.38'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    //implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.hynnet:jxl:2.6.12.1'
     implementation 'org.litepal.android:core:1.6.1'
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.2'
