--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:networkSecurityConfig">
-        <activity android:name=".ui.activity.WebActivity"></activity>
+
+        <activity android:name=".ui.activity.WebActivity"/>
         <activity android:name=".ui.activity.RecordEditActivity" />
         <activity android:name=".ui.activity.EquipAddActivity" />
         <activity android:name="com.pgyersdk.feedback.FeedbackActivity" />
