--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 读写sdcard，storage等等 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- 允许程序录制音频 -->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission
         android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
@@ -32,7 +32,8 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:networkSecurityConfig">
 
-        <activity android:name=".ui.activity.WebActivity"/>
+        <activity android:name=".ui.activity.RecommendActivity"/>
+        <activity android:name=".ui.activity.WebActivity" />
         <activity android:name=".ui.activity.RecordEditActivity" />
         <activity android:name=".ui.activity.EquipAddActivity" />
         <activity android:name="com.pgyersdk.feedback.FeedbackActivity" />
