--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,14 +4,14 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         vectorDrawables.useSupportLibrary = true
         applicationId "com.smallcat.theworld"
         minSdkVersion 19
-        targetSdkVersion 28
-        versionCode 21401
-        versionName "2.14.4"
+        targetSdkVersion 29
+        versionCode 21505
+        versionName "2.15.11"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         ndk {
@@ -20,10 +20,27 @@ android {
         }
     }
 
+    signingConfigs {
+        release {
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+            storePassword 'android'
+            storeFile file('/Users/hui/Desktop/world/debug.keystore')
+        }
+    }
+
     buildTypes {
+
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
+        }
+
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 
@@ -40,10 +57,10 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation files('libs/tbs_sdk_thirdapp_v3.6.0.1249_43610_sharewithdownload_withoutGame_obfs_20180608_114954.jar')
     /*// ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
     kapt "android.arch.lifecycle:compiler:1.1.1"*/
@@ -63,13 +80,12 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.2'
 
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.45'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.49-androidx'
     //implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.hynnet:jxl:2.6.12.1'
     implementation 'org.litepal.android:core:1.6.1'
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
     implementation 'com.pgyersdk:sdk:3.0.4'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
-    implementation 'com.android.support:multidex:1.0.3'
 
 }
