--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.smallcat.theworld"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 21505
-        versionName "2.15.11"
+        versionCode 21702
+        versionName "2.17.10"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         ndk {
@@ -30,7 +30,6 @@ android {
     }
 
     buildTypes {
-
         debug {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -53,12 +52,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     /*// ViewModel and LiveData
@@ -69,6 +68,8 @@ dependencies {
 
     implementation 'com.jakewharton:butterknife:10.1.0'
     kapt 'com.jakewharton:butterknife-compiler:10.1.0'
+
+    implementation 'com.droidninja:filepicker:2.2.1'
 
     implementation 'me.yokeyword:fragmentationx:1.0.0'
     implementation 'me.yokeyword:fragmentationx-swipeback:1.0.0'
@@ -85,7 +86,7 @@ dependencies {
     implementation 'com.hynnet:jxl:2.6.12.1'
     implementation 'org.litepal.android:core:1.6.1'
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
-    implementation 'com.pgyersdk:sdk:3.0.4'
+    implementation 'com.pgyersdk:sdk:3.0.7'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
 
 }
