--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,39 +10,35 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- 读写sdcard，storage等等 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- 读写sdcard，storage等等 -->
     <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- 允许程序录制音频 -->
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.USE_FULL_SCREEN_INTENT" />
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+
     <uses-permission
         android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
 
-    <meta-data
-        android:name="android.max_aspect"
-        android:value="2.1" />
-
     <application
         android:name=".App"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@drawable/logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning"
-        tools:replace="android:networkSecurityConfig">
-
-        <activity android:name=".ui.activity.RecommendActivity"/>
-        <activity android:name=".ui.activity.WebActivity" />
-        <activity android:name=".ui.activity.RecordEditActivity" />
-        <activity android:name=".ui.activity.EquipAddActivity" />
-        <activity android:name="com.pgyersdk.feedback.FeedbackActivity" />
+        tools:ignore="GoogleAppIndexingWarning,UnusedAttribute"
+        tools:replace="android:networkSecurityConfig,android:allowBackup">
 
         <provider
             android:name="com.pgyersdk.PgyerProvider"
             android:authorities="com.smallcat.theworld.com.pgyer.provider"
-            android:exported="false" />
+            android:exported="false"
+            android:grantUriPermissions="true" />
 
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.3" />
         <meta-data
             android:name="PGYER_APPID"
             android:value="91217be11b504026be810322258d504c" />
@@ -69,6 +65,14 @@
         <activity android:name=".ui.activity.MyWorldActivity" />
         <activity android:name=".ui.activity.RecordDetailActivity" />
         <activity android:name=".ui.activity.RecordAddActivity" />
+        <activity android:name=".minipay.ZhiActivity" />
+        <activity android:name=".ui.activity.RecordImportActivity"
+            android:windowSoftInputMode="adjustResize|stateHidden"/>
+        <activity android:name=".ui.activity.RecommendActivity" />
+        <activity android:name=".ui.activity.WebActivity" />
+        <activity android:name=".ui.activity.RecordEditActivity" />
+        <activity android:name=".ui.activity.EquipAddActivity" />
+        <activity android:name="com.pgyersdk.feedback.FeedbackActivity" />
     </application>
 
 </manifest>
