--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.smallcat.theworld"
         minSdkVersion 19
         targetSdkVersion 29
-        versionCode 21702
-        versionName "2.17.10"
+        versionCode 22203
+        versionName "2.22.3"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
         ndk {
@@ -70,23 +70,23 @@ dependencies {
     kapt 'com.jakewharton:butterknife-compiler:10.1.0'
 
     implementation 'com.droidninja:filepicker:2.2.1'
-
     implementation 'me.yokeyword:fragmentationx:1.0.0'
-    implementation 'me.yokeyword:fragmentationx-swipeback:1.0.0'
+    implementation 'com.billy.android:smart-swipe:1.0.8'
+    implementation 'com.billy.android:smart-swipe-x:1.0.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.0'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.2.0'
     implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.2'
 
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.49-androidx'
     //implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'com.pgyersdk:sdk:3.0.10'
     implementation 'com.hynnet:jxl:2.6.12.1'
     implementation 'org.litepal.android:core:1.6.1'
     implementation 'com.github.zcweng:switch-button:0.0.3@aar'
-    implementation 'com.pgyersdk:sdk:3.0.7'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar'
 
 }
